Bug 61209 - [4.10 Regression] internal compiler error: in fold_convert_loc, at fold-const.c:1950
Summary: [4.10 Regression] internal compiler error: in fold_convert_loc, at fold-const...
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: middle-end (show other bugs)
Version: 5.0
: P3 normal
Target Milestone: 5.0
Assignee: Richard Biener
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-17 06:11 UTC by Joost VandeVondele
Modified: 2014-05-19 14:36 UTC (History)
0 users

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2014-05-19 00:00:00


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Joost VandeVondele 2014-05-17 06:11:52 UTC
known good: r210485 known bad: r210542 possibly r210491

> cat bug.f90 
MODULE array_types
  INTERFACE array_data
     MODULE PROCEDURE array_data_i1d
  END INTERFACE
  TYPE array_i1d_type
  END TYPE array_i1d_type
  TYPE array_i1d_obj
     TYPE(array_i1d_type), POINTER      :: low
  END TYPE array_i1d_obj
  TYPE dbcsr_type
     TYPE(array_i1d_obj)     :: local_rows
     LOGICAL                 :: local_indexing
  END TYPE dbcsr_type
  TYPE dbcsr_obj
     TYPE(dbcsr_type) :: m
  END TYPE dbcsr_obj
CONTAINS
  FUNCTION array_data_i1d(array) RESULT (DATA)
    TYPE(array_i1d_obj), INTENT(IN)          :: array
    INTEGER, DIMENSION(:), POINTER           :: DATA
    IF (ASSOCIATED (array%low)) THEN
    ENDIF
  END FUNCTION array_data_i1d
  SUBROUTINE dbcsr_make_index_list (matrix, thread_redist)
    TYPE(dbcsr_obj), INTENT(INOUT)           :: matrix
    LOGICAL, INTENT(IN)                      :: thread_redist
    INTEGER, ALLOCATABLE, DIMENSION(:, :)    :: blki
    INTEGER, DIMENSION(:), POINTER           :: local_rows, td
    INTEGER :: blk
    nthreads = 0
    IF (nthreads .GT. 0 .AND. thread_redist) THEN
       IF (matrix%m%local_indexing) THEN
          local_rows => array_data (matrix%m%local_rows)
       ENDIF
       CALL dbcsr_build_row_index_inplace (thr_c, nthreads)
       IF (matrix%m%local_indexing) THEN
          DO blk = 1, nblks
             IF (td(local_rows(blki(1, blk))) .EQ. ithread) THEN
             ENDIF
          ENDDO
       ENDIF
    ENDIF
  END SUBROUTINE dbcsr_make_index_list
END MODULE

>  gfortran  -c -fbounds-check -O1 bug.f90 
bug.f90: In function ‘dbcsr_make_index_list’:
bug.f90:23:0: internal compiler error: in fold_convert_loc, at fold-const.c:1950
   END FUNCTION array_data_i1d
 ^
0x8144c5 fold_convert_loc(unsigned int, tree_node*, tree_node*)
	../../gcc/gcc/fold-const.c:1949
0x8323a4 fold_widened_comparison
	../../gcc/gcc/fold-const.c:6745
0x8323a4 fold_comparison
	../../gcc/gcc/fold-const.c:9419
0x7f25aa fold_binary_loc(unsigned int, tree_code, tree_node*, tree_node*, tree_node*)
	../../gcc/gcc/fold-const.c:13432
0xbdf360 cond_dom_walker::before_dom_children(basic_block_def*)
	../../gcc/gcc/tree-ssa-sccvn.c:4229
0xf8d62a dom_walker::walk(basic_block_def*)
	../../gcc/gcc/domwalk.c:177
0xbdea8e run_scc_vn(vn_lookup_kind)
	../../gcc/gcc/tree-ssa-sccvn.c:4295
0xbb5591 execute
	../../gcc/gcc/tree-ssa-pre.c:4846
Please submit a full bug report,
Comment 1 Dominique d'Humieres 2014-05-19 08:49:03 UTC
Confirmed. It requires -fbounds-check (it could be a duplicate).
Comment 2 Richard Biener 2014-05-19 10:42:18 UTC
Mine.
Comment 3 Richard Biener 2014-05-19 14:32:56 UTC
Author: rguenth
Date: Mon May 19 14:32:23 2014
New Revision: 210613

URL: http://gcc.gnu.org/viewcvs?rev=210613&root=gcc&view=rev
Log:
2014-05-19  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/61209
	* tree-ssa-sccvn.c (visit_phi): Avoid setting expr to VN_TOP.

	* gfortran.dg/pr61209.f90: New testcase.

Added:
    trunk/gcc/testsuite/gfortran.dg/pr61209.f90
Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/testsuite/ChangeLog
    trunk/gcc/tree-ssa-sccvn.c
Comment 4 Richard Biener 2014-05-19 14:36:19 UTC
Fixed.