2014-05-19  Richard Biener  <rguenther@suse.de>

PR tree-optimization/61209
	* tree-ssa-sccvn.c (visit_phi): Avoid setting expr to VN_TOP.

	* gfortran.dg/pr61209.f90: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@210613 138bc75d-0d04-0410-961f-82ee72b054a4